Fixed bug where homepage right border not round, and slide up down cannot see since overflow hidden, and added fading water mark

--- a/src/App.css
+++ b/src/App.css
@@ -768,7 +768,7 @@ body.no-transition .flip-container .back {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  border-radius: 10px;
 }
 
 .button-box {
